Closed Bug 1698104 Opened 5 years ago Closed 5 years ago

Fix session restore for about:reader

Categories

(Firefox :: Session Restore, defect, P2)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Fission Milestone M7a
Tracking Status
firefox89 --- fixed

People

(Reporter: u608768, Assigned: annyG)

References

Details

Attachments

(1 file, 1 obsolete file)

The non-SHIP code restores about:reader scroll position after receiving "AboutReaderContentReady". The SHIP code that was written in bug 1597499 doesn't do this yet. We'll need to wait for this event or the similar "AboutReader:Ready" window notification when restoring an about:reader page.

This will fix browser/components/sessionstore/test/browser_scrollPositionsReaderMode.js.

Anny is looking into this.

Attachment #9209258 - Attachment is obsolete: true

Non-SHIP code restores about:reader scroll position after receiving
"AboutReaderContentReady" event. To achieve the same thing when SHIP is
enabled, we can wait for "AboutReader:Ready" event in docshell before restoring
tab content for an about:reader page.

browser_scrollPositionsReaderMode.js was disabled for SHIP in bug 1597499.

Severity: -- → S3
Status: NEW → ASSIGNED
Type: task → defect
Fission Milestone: --- → M7a
Priority: -- → P2
Attachment #9209596 - Attachment description: Bug 1698104 - Fix session restore for about:reader, r=nika! → Bug 1698104 - Fix session restore for about:reader, r=nika!,kashav!,farre!
Attachment #9209596 - Attachment description: Bug 1698104 - Fix session restore for about:reader, r=nika!,kashav!,farre! → Bug 1698104 - Fix session restore for about:reader, r=nika!,kashav!
Pushed by kmadan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f260c97afed9 Fix session restore for about:reader, r=nika,kashav
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: